Andon (10/Feb/02)
------------------
Additions (SnowBlind):
 + Added a way to turn off drawing of each range circle PLEASE
   CLICK DOWN DOWN BUTTON UNTILL IT SAYS 'No Draw' IF YOU DONT
   WANT THEM TO DRAW
 + Changed the steping of the range circle to 25
 
Bug fixes:
 + Fixed a SERIOUS stack corruption issue with the dump unknown
   data code..  Using printf on a plain string is BAD BAD BAD,
   Any packet containing a %* in it could cause a stack corrup-
   tion. It's been fixed, and there's no longer a security risk
   associated with that code.


Andon (09/Feb/02)
------------------

Additions:
 + Added the ability to toggle a few DEBUG features on or off
   at runtime... They are:
     - Log unknown packets to stdout
     - Log unknown packets to a file
     - Enable experimental code
     - Show out of order packets

    * More to come later

Additions (SnowBlind):
 + Added a new prefs tab for Map Circles to allow runtime changing.
   of circles radius (support for user entered numbers comming soon)
 + Moved the Map Circles draw options from the Map Display to the
   new prefs tab.

   * More to come later (maybe line thickness, and color)


Andon (08/Feb/02)
------------------

Bug fixes (Me):
 + CapnBry's mob delta position prediction has been disabled
   by default now.. For testing purposes, it can still be
   enabled by removing the #undef ALPHA_QUALITY in excalibur.h

Additions (Snowblind):
 + Enhanced the status bar.. Displays zone name now

Additions (Snowblind):
 + Enhanced the status bar.. It's MUCH nicer now than it was.

Additions (CapnBry):
 + Added range circles to the map
 + Added --dumpunknown to the command line switches
 + Added projection of mob / player positions to aproximate current location
   based on heading and speed.
 + Added support for "Stop mob movement" stream.

Additions (Me):
 + Added a '--help' command line switch.
 + Added a GUI element in the preferences to toggle range
   circles on and off at run-time.