@@ -1,5 +1,15 @@
 Andon (10/Feb/02)
 ------------------
+
+Additions:
+ + Added support to compile Excalibur 1.0.7 in FreeBSD!!
+    (Thank you Ackmed)
+
+   * The code assumes you want to sniff on fxp0, if you want
+     to use another interface, edit excalibur.h - I'll add
+     support to change this at runtime when I get some more
+     free time
+
 Additions (SnowBlind):
  + Added a way to turn off drawing of each range circle PLEASE
    CLICK DOWN DOWN BUTTON UNTILL IT SAYS 'No Draw' IF YOU DONT
